<resources>
    <string name="app_name">New7learn</string>
    <string name="user_welcome_message">Hello the world</string>
    <string name="button01">Implicit Intent</string>
    <string name="button02">Explisit Intent</string>
    <string name="UserInfo_fa">اطلاعات کاربری</string>
    <string name="todo01">TODO</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="gender">جنسیت</string>
    <string name="html">HTML</string>
    <string name="confrimation">ثبت اطلاعات</string>
    <string name="n_7learn">TODO</string>
</resources>
