<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/form_background_Image"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/form_background"
        android:contentDescription="@string/n_7learn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/UserInfo_fa"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@null"
            android:src="@drawable/ic_action_arrow_back11"
            android:contentDescription="@string/n_7learn" />
    </RelativeLayout>

    <Button
        android:id="@+id/Edit_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/form_background_Image"
        android:layout_alignBottom="@+id/form_background_Image"
        android:layout_marginRight="@dimen/standard_margin"
        android:text="تغییر عکس" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/Edit_avatar"
        android:layout_alignLeft="@id/Edit_avatar"
        android:layout_alignRight="@id/Edit_avatar"
        android:src="@drawable/default_avatar" />

    <LinearLayout
        android:id="@+id/unknownLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/form_background_Image"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="اطلاعات فردی"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font_size" />

        <EditText
            android:id="@+id/edit_text_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/from_filds_margin"
            android:layout_marginRight="@dimen/from_filds_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:hint="نام"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/normal_font_size" />

        <EditText
            android:id="@+id/edit_text_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/from_filds_margin"
            android:layout_marginRight="@dimen/from_filds_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:hint="نام خانوادگی"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="@dimen/normal_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="تخصص ها"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font_size"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/JAVA_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="JAVA"/>
            <CheckBox
                android:id="@+id/CSS_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="CSS"/>
            <CheckBox
                android:id="@+id/HTML_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@string/html"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font_size"

            />

        <RadioGroup
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/standard_margin">
            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@string/woman" />
            <RadioButton
                android:id="@+id/male_radio"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man" />
        </RadioGroup>
        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/from_filds_margin"
            android:layout_marginLeft="@dimen/from_filds_margin"
            android:text="@string/confrimation"/>



    </LinearLayout>


</RelativeLayout>